--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Module 5</title>
 </head>
 <body>
-    
+    <main>
+        
+    </main>
     <script src="./script.js"></script>
 </body>
 </html>
